--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -11,6 +11,8 @@
         <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+
         <!-- WEB FONTS : use %7C instead of | (pipe) -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600%7CRaleway:300,400,500,600,700%7C
                     Lato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
@@ -54,7 +56,7 @@
 
 						<!-- Logo -->
 						<a class="logo float-left"  href="{% url 'index' %}">
-							<img src="/static/img/FIMCO-Weblogo.jpg" alt=""/>
+							<img src="/static/img/FIMCO-POCHI-LOGOS-final.png" alt=""/>
 						</a>
 
 {#                        <ul class="float-right nav nav-pills nav-second-main">#}
