--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -11,7 +11,9 @@
         <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
-		<!-- WEB FONTS -->
+	    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+
+        <!-- WEB FONTS -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700%7CRoboto:300,400,400italic,600,700"
               rel="stylesheet" type="text/css" />
 
