Updated advisory, brokerage and fund management

--- a/fimco/fimcosite/templates/contact.html
+++ b/fimco/fimcosite/templates/contact.html
@@ -136,10 +136,10 @@
                                             <label for="contact:subject">Subject *</label>
                                             <input required type="text" value="" class="form-control" name="contact[subject][required]" id="contact:subject">
                                         </div>
-                                        <div class="col-md-4">
-                                            <label for="contact:id">POCHI ID<small> (optional)</small></label>
-                                            <input type="text" value="" class="form-control" name="contact[id]" id="contact:id">
-                                        </div>
+{#                                        <div class="col-md-4">#}
+{#                                            <label for="contact:id">POCHI ID<small> (optional)</small></label>#}
+{#                                            <input type="text" value="" class="form-control" name="contact[id]" id="contact:id">#}
+{#                                        </div>#}
                                 </div>
                                 <div class="row">
                                         <div class="col-md-12">
