--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/Funds-Management.png" height="250" width="250" alt="" />
+                    <img class="float-left" src="/static/img/Funds-Management.png" height="250" width="178" alt="57%" />
                     <div class="heading-title">
                         <h2>Fund Management</h2>
                     </div>
