--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/Brokerage.png" height="250" width="250" alt="" />
+                    <img class="float-left" src="/static/img/Brokerage.png" height="159" width="250" alt="51%" />
                     <div class="heading-title">
                         <h2>Brokerage</h2>
                     </div>
